# Laidmets-thesis-2026-Camera-navigation

./: .gitignore  README.md
semubot_ros2_ws/src/semubot_bringup/: CMakeLists.txt  package.xml
semubot_ros2_ws/src/semubot_bringup/config/: semubot_real.rviz
semubot_ros2_ws/src/semubot_bringup/launch/: camera.launch.py  laptop_bringup.launch.py  robot_bringup.launch.py
semubot_ros2_ws/src/semubot_bringup/scripts/: odom_broadcaster.py
semubot_ros2_ws/src/semubot_camera_navigation/: CMakeLists.txt  package.xml
semubot_ros2_ws/src/semubot_camera_navigation/config/: ekf.yaml  nav2_params.yaml  slam_toolbox_params.yaml
semubot_ros2_ws/src/semubot_camera_navigation/launch/: nav2_bringup.launch.py  rtabmap_bringup.launch.py  slam_bringup.launch.py
